# aiteacher-monorepo

./: .gitignore  .npmrc  CLAUDE.md  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/LandPPT/: .env.example  landppt.db  package.json  project.json  pyproject.toml  run.py  uv.toml
apps/LandPPT/src/landppt/: __init__.py  main.py
apps/LandPPT/src/landppt/ai/: __init__.py  base.py  providers.py
apps/LandPPT/src/landppt/api/: __init__.py  config_api.py  database_api.py  global_master_template_api.py  image_api.py  landppt_api.py  models.py  openai_compat.py  usage_api.py
apps/LandPPT/src/landppt/auth/: __init__.py  auth_service.py  middleware.py  routes.py
apps/LandPPT/src/landppt/core/: __init__.py  config.py
apps/LandPPT/src/landppt/database/: __init__.py  create_default_template.py  database.py  health_check.py  migrations.py  models.py  repositories.py  service.py
apps/LandPPT/src/landppt/database/migrations/: add_project_share_fields.py  add_speech_scripts_table.py
apps/LandPPT/src/landppt/services/: __init__.py  ai_service.py  background_tasks.py  config_service.py  db_project_manager.py  deep_research_service.py  enhanced_ppt_service.py  file_processor.py  global_master_template_service.py  pdf_to_pptx_converter.py  pdf_to_pptx_worker.py  ppt_image_processor.py  ppt_service.py  progress_tracker.py  project_manager.py  pyppeteer_pdf_converter.py  research_report_generator.py  service_instances.py  share_service.py  speech_script_exporter.py  speech_script_repository.py  speech_script_service.py  url_service.py
apps/LandPPT/src/landppt/services/image/: image_service.py  models.py
apps/LandPPT/src/landppt/services/models/: slide_image_info.py
apps/LandPPT/src/landppt/services/prompts/: __init__.py  (+6 more)
apps/LandPPT/src/landppt/utils/: thread_pool.py
apps/LandPPT/src/landppt/web/: __init__.py  routes.py
apps/LandPPT/src/summeryanyfile/: __init__.py  main.py
apps/LandPPT/src/summeryanyfile/config/: __init__.py  prompts.py  settings.py
apps/LandPPT/src/summeryanyfile/core/: __init__.py  document_processor.py  file_cache_manager.py  json_parser.py  llm_manager.py  magic_pdf_converter.py  markitdown_converter.py  mineru_api_client.py  models.py
apps/LandPPT/src/summeryanyfile/generators/: __init__.py  chains.py  ppt_generator.py
apps/LandPPT/src/summeryanyfile/graph/: __init__.py  nodes.py  workflow.py
apps/LandPPT/src/summeryanyfile/utils/: __init__.py  file_handler.py  logger.py  validators.py
apps/LandPPT/template_examples/: Toy风.json  中国风.json  中式书卷风.json  五彩斑斓的黑.json  吉卜力风.json  商务.json  大气红.json  宣纸风.json  拟态风.json  日落大道.json  星月夜风.json  星月蓝.json  森林绿.json  模糊玻璃.json  清新笔记.json  清新风.json  科技风.json  竹简风.json  简约答辩风.json  素白风.json  终端风.json  莫奈风.json  赛博朋克风.json  速度黄.json  饺子风.json
(+284 files in other folders)
